Fix scrollbar overlapping selected list icons, remove unneeded npm packages

--- a/src_docs/app.component.scss
+++ b/src_docs/app.component.scss
@@ -11,9 +11,6 @@
 
 @import './flex';
 
-$fa-font-path: '~font-awesome/fonts';
-@import '~font-awesome/scss/font-awesome.scss';
-
 .oc-margin-bottom {
     margin-bottom: 1rem;
 }
